samples/_failures_safe/1761221802_d55132_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3783497c.c: In function ‘main’:
./samples/SAFE/__tmp_3783497c.c:137:5: error: expected declaration or statement at end of input
  137 |     }
      |     ^
